[gd_scene load_steps=14 format=2]

[ext_resource path="res://Juego/Meteoritos/MeteoritoSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Meteoritos/SectorMeteoritos.gd" type="Script" id=2]
[ext_resource path="res://Juego/Sonido/Advertencia.ogg" type="AudioStream" id=3]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -0.0455017, -538.043 )
b = Vector2( -0.223907, 543.701 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -0.0060463, -108.634 )
b = Vector2( 0.0505219, 109.155 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -192.791, 0.529858 )
b = Vector2( 192.177, 0.26289 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 192.711, 0.769836 )
b = Vector2( -191.723, 1.1795 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 0.431885, -895.064 )
b = Vector2( 0.431885, 882.916 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( -1.03098, 900.875 )
b = Vector2( 0.764923, -895.064 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( -1397.84, 0.987198 )
b = Vector2( 1408.31, 0.0892181 )

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( -1397.84, -0.722916 )
b = Vector2( 1399.33, 1.07303 )

[sub_resource type="Animation" id=9]
resource_name = "advertencia"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 2.7, 4.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.034 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("SpawnTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="SectorMeteoritos" type="Node2D"]
position = Vector2( 968.713, 531.447 )
script = ExtResource( 2 )

[node name="BordesNavePlayer" type="Node2D" parent="."]

[node name="BordeIzquierdo" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( -960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeIzquierdo"]
scale = Vector2( 5, 1 )
shape = SubResource( 1 )

[node name="BordeDerecho" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 960, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeDerecho"]
scale = Vector2( 5, 5 )
shape = SubResource( 2 )

[node name="BordeSuperior" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, -540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeSuperior"]
scale = Vector2( 5, 5 )
shape = SubResource( 3 )

[node name="BordeInferior" type="StaticBody2D" parent="BordesNavePlayer"]
position = Vector2( 0, 540 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BordesNavePlayer/BordeInferior"]
scale = Vector2( 5, 5 )
shape = SubResource( 4 )

[node name="DetectorFueraDeZona" type="Node2D" parent="."]

[node name="DetectorIzquierdo" type="Area2D" parent="DetectorFueraDeZona"]
position = Vector2( -1400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraDeZona/DetectorIzquierdo"]
position = Vector2( 4.48987, 4.48987 )
scale = Vector2( 5, 1 )
shape = SubResource( 5 )

[node name="DetectorDerecho" type="Area2D" parent="DetectorFueraDeZona"]
position = Vector2( 1400, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraDeZona/DetectorDerecho"]
scale = Vector2( 5, 1 )
shape = SubResource( 6 )

[node name="DetectorSuperior" type="Area2D" parent="DetectorFueraDeZona"]
position = Vector2( 0, -900 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraDeZona/DetectorSuperior"]
position = Vector2( 5.65674, 0 )
scale = Vector2( 1, 5 )
shape = SubResource( 7 )

[node name="DetectorInferior" type="Area2D" parent="DetectorFueraDeZona"]
position = Vector2( 0, 900 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorFueraDeZona/DetectorInferior"]
scale = Vector2( 1, 5 )
shape = SubResource( 8 )

[node name="Spawners" type="Node2D" parent="."]

[node name="MeteoritoSpawner" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -720 )

[node name="MeteoritoSpawner2" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 720 )
direccion = Vector2( 1, -1 )

[node name="MeteoritoSpawner3" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 708.687 )
direccion = Vector2( -1, -1 )

[node name="MeteoritoSpawner4" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -720 )
direccion = Vector2( -1, 1 )

[node name="MeteoritoSpawner5" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, -720 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner6" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, -720 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner7" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 575, 720 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner8" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -575, 720 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner9" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 360 )
direccion = Vector2( -1, 0 )

[node name="MeteoritoSpawner10" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, -360 )
direccion = Vector2( -1, 0 )

[node name="MeteoritoSpawner11" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, -360 )
direccion = Vector2( 1, 0 )

[node name="MeteoritoSpawner12" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 360 )
direccion = Vector2( 1, 0 )

[node name="MeteoritoSpawner13" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, 720 )
direccion = Vector2( 0, -1 )

[node name="MeteoritoSpawner14" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 0, -720 )
direccion = Vector2( 0, 1 )

[node name="MeteoritoSpawner15" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( 1150, 0 )
direccion = Vector2( -1, 0 )

[node name="MeteoritoSpawner16" parent="Spawners" instance=ExtResource( 1 )]
position = Vector2( -1150, 0 )
direccion = Vector2( 1, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -2.42749, 1.64111 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_left = 0.504538
anchor_top = 0.49208
anchor_right = 0.504538
anchor_bottom = 0.49208
margin_left = -960.0
margin_top = -536.0
margin_right = 956.0
margin_bottom = 546.0
color = Color( 0.952941, 0, 0, 0.145098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = -9.0
margin_top = 7.0
margin_right = 377.0
margin_bottom = 222.0
rect_scale = Vector2( 5, 5 )
text = "!!!!ADVERTENCIA!!!!
LLUVIA DE METEORITOS"
align = 1
valign = 1
max_lines_visible = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -0.034

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "advertencia"
anims/advertencia = SubResource( 9 )
anims/default = SubResource( 10 )
[connection signal="body_entered" from="DetectorFueraDeZona/DetectorIzquierdo" to="." method="_on_DetectorIzquierdo_body_entered"]
[connection signal="body_entered" from="DetectorFueraDeZona/DetectorDerecho" to="." method="_on_DetectorDerecho_body_entered"]
[connection signal="body_entered" from="DetectorFueraDeZona/DetectorSuperior" to="." method="_on_DetectorSuperior_body_entered"]
[connection signal="body_entered" from="DetectorFueraDeZona/DetectorInferior" to="." method="_on_DetectorInferior_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
